Attempt at spacing the modal correctly on Brave Android

--- a/components/ModalElement/modal-element.css
+++ b/components/ModalElement/modal-element.css
@@ -116,7 +116,8 @@ hr {
 }
 
 @media (hover: none) and (pointer: coarse) {
-  .modal-dialog {
-    margin-top: 1rem;
+  .modal-backdrop {
+    align-items: flex-start;
+    padding-top: 1rem;
   }
 }
